tests/sksl/errors/OverflowInt64Literal.glsl
### Compilation failed:

error: 1: integer is too large: 18446744073709551621
const int not_five = 18446744073709551621; // actually 0x10000000000000005
                     ^^^^^^^^^^^^^^^^^^^^
1 error
